--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATA_BASE="mongodb+srv://karthikeya333:Karthikeya@333@cluster0.8tvqp.mongodb.net/?retryWrites=true&w=majority"
+DATA_BASE="mongodb://localhost:27017/k-foods"
